# ESNZ-ForecastApp

./: .gitignore  .vercelignore  README.md  cluster2000x.f  clusterSTEPmag.m  clusterSTEPtime.m  jest.config.js  mkdocs.yml  next.config.js  package-lock.json  package.json  reproduce_overflow.js  tailwind.config.ts  test-nzcat-parser.js  test_invalid.csv  touch_restart.txt  vercel.json  verify_fix.js
__tests__/: csvParser.test.ts
__tests__/performance/: clustering.test.ts  filtering.test.ts  sampling.test.ts
docs/: CLUSTERING_ALGORITHMS.md  DBSCAN_CLUSTERING.md  ENHANCED_CSV_PARSER.md  HARDEBECK_2019_CLUSTERING.md  HDBSCAN_CLUSTERING.md  KMEANS_CLUSTERING.md  NEAREST_NEIGHBOR_CLUSTERING.md  OMORI_ANALYSIS_COMPLETE.md  OMORI_LAW_ANALYSIS.md  OMORI_LAW_FIX.md  OMORI_PLOT_UPDATES.md  OMORI_PROGRESS_INDICATOR.md  OPTICS_CLUSTERING.md  OPTIMIZATION_COMPLETE.md  PARALLEL_FETCH_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATIONS.md  STEP_CLUSTERING.md  ST_DBSCAN_CLUSTERING.md  TMC_CLUSTERING.md  architecture.md  clustering-algorithms.md  conf.py  data-flow.md  data-sources.md  declustering-methods.md  index.md  interface.md  performance.md  requirements.txt  setup.md  srl_paper.txt  statistical-models.md
docs/clustering/: dbscan.md  hdbscan.md  kmeans.md  optics.md  st-dbscan.md
docs/declustering/: gardner-knopoff.md  hardebeck-2019.md  step-mag.md  (+4 more)
esnz_aftershocks/: pyproject.toml
esnz_aftershocks/esnz_aftershocks/: __init__.py  comparison.py  declustering.py  gutenberg_richter.py  models.py  omori.py  optimization.py  plots.py  spatial_filter.py
scripts/: update-cache.mjs
(+107 files in other folders)
