[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esnz_aftershocks"
version = "0.1.0"
authors = [
  { name="ESNZ Package Maintainers" },
]
description = "A package for Earthquake Statistical New Zealand (ESNZ) aftershock sequence cataloging and analysis."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
